@@ -1,0 +1,2 @@
+/etc/linstaller/ubuntu
+/etc/linstaller/ubuntu-nolive
