@@ -1,0 +1,1 @@
+/usr/share/linstaller/linstaller/modules/ubuntu
